--- a/nav.css
+++ b/nav.css
@@ -50,7 +50,7 @@
         z-index: 1;
         top: 0;
         left: 0;
-        background-color: #111;
+        background-color: black;
         overflow-x: hidden;
         transition: 0.5s;
         padding-top: 50px;
